add authors photos

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <div class="modal_container" id="modal_container_marshak">
                     <div class="modal">
                         <h2>Самуил Яковлевич Маршак</h2>
+                        <img src="./images/marshak_photo.jpeg" alt="">
                         <p>Русский советский поэт, драматург и переводчик, литературный критик, сценарист. Автор популярных детских книг. Лауреат Ленинской и четырёх Сталинских премий</p>
                         <button id="close_marshak">
                             <p>Назад</p>
@@ -87,6 +88,7 @@
                 <div class="modal_container" id="modal_container_chukovskiy">
                     <div class="modal">
                         <h2>Корней Иванович Чуковский</h2>
+                        <img src="./images/chukovskiy_photo.jpeg" alt="">
                         <p>Русский советский поэт, публицист, литературный критик, переводчик и литературовед, детский писатель, журналист. Отец писателей Николая Корнеевича Чуковского и Лидии Корнеевны Чуковской</p>
                         <button id="close_chukovskiy">
                             <p>Назад</p>
@@ -102,6 +104,7 @@
                 <div class="modal_container" id="modal_container_bianki">
                     <div class="modal">
                         <h2>Виталий Валентинович Бианки</h2>
+                        <img src="./images/bianki_photo.png" alt="">
                         <p>Советский писатель, автор многих произведений для детей</p>
                         <button id="close_bianki">
                             <p>Назад</p>
@@ -117,6 +120,7 @@
                 <div class="modal_container" id="modal_container_zhitkov">
                     <div class="modal">
                         <h2>Борис Степанович Житков</h2>
+                        <img src="./images/zhitkov_photo.jpeg" alt="">
                         <p>Русский и советский писатель, прозаик, путешественник и исследователь. Автор популярных приключенческих рассказов и повестей, произведений о животных и романа «Виктор Вавич» о революции 1905 года</p>
                         <button id="close_zhitkov">
                             <p>Назад</p>
@@ -132,6 +136,7 @@
                 <div class="modal_container" id="modal_container_barto">
                     <div class="modal">
                         <h2>Агния Львовна Барто</h2>
+                        <img src="./images/barto_photo.jpeg" alt="">
                         <p>Русская советская детская поэтесса, писательница, киносценаристка, радиоведущая. Лауреат Сталинской премии второй степени и Ленинской премии</p>
                         <button id="close_barto">
                             <p>Назад</p>
@@ -147,6 +152,7 @@
                 <div class="modal_container" id="modal_container_sibiryak">
                     <div class="modal">
                         <h2>Дмитрий Наркисович Мамин-Сибиряк</h2>
+                        <img src="./images/sibiryak_photo.jpeg" alt="">
                         <p>Русский писатель-прозаик и драматург</p>
                         <button id="close_sibiryak">
                             <p>Назад</p>
@@ -162,6 +168,7 @@
                 <div class="modal_container" id="modal_container_pushkin">
                     <div class="modal">
                         <h2>Александр Сергеевич Пушкин</h2>
+                        <img src="./images/pushkin_photo.jpeg" alt="">
                         <p>Русский поэт, драматург и прозаик, заложивший основы русского реалистического направления, литературный критик и теоретик литературы, историк, публицист, журналист; один из самых авторитетных литературных деятелей первой трети XIX века</p>
                         <button id="close_pushkin">
                             <p>Назад</p>
