--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="header">
             <h1>Название Сайта</h1>
-            <h2>как продавались детские книжки в 1918 - 1939 годах</h2>
+            <h3>как издавались и продавались детские книжки в 1918 - 1939 годах</h3>
             <img src="./images/kids.png">
         </div>
         
