add title + fix margins

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <link rel="icon" href="./images/book-icon.png" type="image/png">
-        <title>childlit</title>
+        <title>Школьнику на память</title>
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,14 +29,17 @@
         </div>
 
         <div class="header">
-            <h1>Название Сайта</h1>
+            <h1>Школьнику на память</h1>
             <h3>как издавались и продавались детские книжки в 1918 - 1939 годах</h3>
             <img src="./images/kids.png">
         </div>
         
         <div class="about">
             <p>
-                В своём стремлении повысить качество жизни, они забывают, что глубокий уровень погружения способствует повышению качества новых принципов формирования материально-технической и кадровой базы. В частности, граница обучения кадров позволяет оценить значение соответствующих условий активизации. Равным образом, постоянное информационно-пропагандистское обеспечение нашей деятельности выявляет срочную потребность вывода текущих активов.
+                С 1918 по 1939 годы в Советском Союзе было издано более 15 тысяч детских книг. По советской детской литературе этого периода существует обширная библиография, но подавляющее большинство исследований используют классические качественные методы. Мы попытались посмотреть на этот массив литературы в целом при помощи количественных методов исследования.
+            </p>
+            <p>
+                На этом сайте визуализирована база данных, составленная на основе библиографических справочников И.И. Старцева.
             </p>
         </div>
 
