add bibliography tooltip

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
                 С 1918 по 1939 годы в Советском Союзе было издано более 15 тысяч детских книг. По советской детской литературе этого периода существует обширная библиография, но подавляющее большинство исследований используют классические качественные методы. Мы попытались посмотреть на этот массив литературы в целом при помощи количественных методов исследования.
             </p>
             <p>
-                На этом сайте визуализирована база данных, составленная на основе библиографических справочников И.И. Старцева.
+                На этом сайте визуализирована база данных, составленная на основе 
+                <div class="tooltip"> 
+                    библиографических справочников И.И. Старцева.
+                    <span class="tooltip-text">
+                        Старцев И.И. Детская литература: библиография, 1918-1931. М.: Молодая гвардия, 1933. 330 с.
+                    </span>
+                </div>
             </p>
         </div>
 
