--- a/index.html
+++ b/index.html
@@ -274,6 +274,29 @@
             <div class='tableauPlaceholder' id='viz1651581891460' style='position: relative'><noscript><a href='#'><img alt='Dashboard 6 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ch&#47;childlitmapnomsk&#47;Dashboard6&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='childlitmapnomsk&#47;Dashboard6' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ch&#47;childlitmapnomsk&#47;Dashboard6&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1651581891460');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </div>
 
+        <div class="authors">
+            <div class="member">
+                <div class="role">
+                    <h6>Исследовательница</h6>
+                    <h5>Лиза Соломянник</h5>
+                </div>
+                <div class="social">
+                    <a href="https://github.com/lizasolomyannik" target="_blank"><img src="./images/github-pngrepo-com.png" alt="github logo"></a>
+                    <a href="t.me/easolomyannik" target="_blank"><img src="./images/telegram-pngrepo-com.png" alt="telegram logo"></a>
+                </div>
+            </div>
+            <br>
+            <div class="member">
+                <div class="role">
+                    <h6>Художница</h6>
+                    <h5>Регина Бадертдинова</h5>
+                </div>
+                <div class="social">
+                    <a href="https://www.behance.net/ruserenard" target="_blank"><img src="./images/behance-logo-pngrepo-com.png" alt="behance logo"></a>
+                </div>
+            </div>
+        </div>
+
     </body>
     
 </html>
