fix telegram link

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </div>
                 <div class="social">
                     <a href="https://github.com/lizasolomyannik" target="_blank"><img src="./images/github-pngrepo-com.png" alt="github logo"></a>
-                    <a href="t.me/easolomyannik" target="_blank"><img src="./images/telegram-pngrepo-com.png" alt="telegram logo"></a>
+                    <a href="https://t.me/easolomyannik" target="_blank"><img src="./images/telegram-pngrepo-com.png" alt="telegram logo"></a>
                 </div>
             </div>
             <br>
