--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 <div class="tooltip"> 
                     библиографических справочников И.И. Старцева.
                     <span class="tooltip-text">
-                        Старцев И.И. Детская литература: библиография, 1918-1931. М.: Молодая гвардия, 1933. 330 с.
+                        Старцев И.И. Детская литература: библиография, 1918-1931 гг. М.: Молодая гвардия, 1933. 330 с.
+                        <br>
+                        Старцев И.И. Детская литература: библиография, 1932-1939 гг. Л.: Детиздат, 1941. 376 с.
                     </span>
                 </div>
             </p>
