first graph description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <script defer src="./scripts/script.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 
     <body>
@@ -36,7 +37,7 @@
         
         <div class="about">
             <p>
-                С 1918 по 1939 годы в Советском Союзе было издано более 15 тысяч детских книг. По советской детской литературе этого периода существует обширная библиография, но подавляющее большинство исследований используют классические качественные методы. Мы попытались посмотреть на этот массив литературы в целом при помощи количественных методов исследования.
+                С 1918 по 1939 годы в Советском Союзе было издано <b style="color: #9a292b;">более 15 тысяч</b> детских книг. По советской детской литературе этого периода существует обширная библиография, но подавляющее большинство исследований используют классические качественные методы. Мы попытались посмотреть на этот массив литературы в целом при помощи <a style="color: #9a292b;" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B5_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D1%8B_%D0%B8%D1%81%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B9" target="_blank">количественных методов исследования данных</a>.
             </p>
             <p>
                 На этом сайте визуализирована база данных, составленная на основе 
@@ -53,11 +54,21 @@
 
         <div class="paragraph">
             <p>
-                Период исследования охватывает 20 лет, от Октябрьского переворота до начала Второй Мировой войны. С точки зрения классической периодизации социально-экономической истории России он включает в себя периоды военного коммунизма (с 1918 по 1921 гг.), новой экономической политики (с 1921 по 1929-1931 гг.), форсированной индустриализации страны и коллективизации сельского хозяйства (от рубежа 1930-х годов до конца десятилетия).
+                Период исследования охватывает <b style="color: #9a292b;">20 лет</b>, от Октябрьского переворота до начала Второй Мировой войны. 
+                С точки зрения классической периодизации социально-экономической истории России он включает в себя периоды
+                <ul>
+                    <li><i class="fa fa-history" aria-hidden="true"></i>военного коммунизма (с 1918 по 1921 гг.),</li>
+                    <li><i class="fa fa-history" aria-hidden="true"></i>новой экономической политики (с 1921 по 1929-1931 гг.),</li>
+                    <li><i class="fa fa-history" aria-hidden="true"></i>форсированной индустриализации страны и коллективизации сельского хозяйства (от рубежа 1930-х годов до конца десятилетия).</li>
+                </ul>
             </p>
             <p>
                 Используя материал датасета о детской литературе, мы увидим, как социально-политические изменения отражались в детском книгоиздании, как приобретали и теряли популярность авторы детских книг, и как цены на детские книги коррелировали с общей ситуацией в стране.
             </p>
+        </div>
+
+        <div class=graph-name>
+            <h3>Количество произведений, опубликованных в каждом году</h3>
         </div>
 
         <div class="graph"> <!-- количество книг в год -->
@@ -66,13 +77,41 @@
 
         <div class="paragraph">
             <p>
-                Наиболее простой и одновременно один из наиболее информативных графиков. В 1918 году, с началом политики военного коммунизма, в стране все же были опубликованы 453 книги. Это объясняется тем, что книгоиздание и полиграфическая промышленность, в отличие от выпуска и распространения периодических изданий, в целом оставались на периферии интересов советского правительства. 
+                Наиболее простой и одновременно один из наиболее информативных графиков. 
             </p>
             <p>
-                Книжные издательства и типографии национализировались не распоряжениями высших органов государственной власти (Всероссийского центрального исполнительного комитета, Совета народных комиссаров, Высшего совета народного хозяйства), а решениями местных советов. Так, последние независимые московские типографии были переведены в собственность Московского городского совета только 23 октября 1918 года на основании постановления президиума Моссовета «О буржуазной печати и положении типографского дела в Москве». Поэтому до осени 1918 года крупнейшие издатели (И. Д. Сытин, И. Н. Кнебель и др.) имели возможность продолжать работу. Вполне вероятно, что и часть книг, учтенных, в соответствии с годом выпуска под 1919 годом, в действительности были выпущены в предыдущем, 1918 году (практика печати следующего года на книгах, выпущенных в конце текущего календарного года, хорошо известна до настоящего времени).
+                В <b style="color: #9a292b;">1918</b> году, с началом политики военного коммунизма, в стране все же были опубликованы <b style="color: #9a292b;">453 книги</b>. 
+                Это объясняется тем, что книгоиздание и полиграфическая промышленность, в отличие от выпуска и распространения периодических изданий, в целом оставались на периферии интересов советского правительства. 
             </p>
             <p>
-                Выпуск детских книг неуклонно сокращается в течение всех лет военного коммунизма и достигает минимума в 1921 году — всего 39 наименований, преимущественно книги Государственного издательства СССР. Весной 1921 года, вскоре после Кронштадтского восстания, X съезд РКП (б) принимает решение о проведении новой экономической политики; разрешается ограниченная частная собственность на промышленные и торговые предприятия.
+                Книжные издательства и типографии национализировались решениями местных советов, а не распоряжениями
+                <div class="tooltip-p">
+                    высших органов государственной власти.
+                    <span class="tooltip-p-text">
+                        Всероссийский центральный исполнительный комитет, 
+                        <br>
+                        Совет народных комиссаров, 
+                        <br>
+                        Высший совет народного хозяйства
+                    </span>
+                </div>
+            </p>
+            <p>
+                Так, последние независимые московские типографии были переведены в собственность Московского городского совета только 
+                <div class="tooltip-p"> 
+                    <b style="color: #9a292b;">23 октября 1918 года.</b>
+                    <span class="tooltip-p-text">
+                        на основании постановления президиума Моссовета «О буржуазной печати и положении типографского дела в Москве»
+                    </span>
+                </div> 
+            </p>
+            <p>
+                Поэтому до осени <b style="color: #9a292b;">1918</b> года крупнейшие издатели (И. Д. Сытин, И. Н. Кнебель и др.) имели возможность продолжать работу. 
+                Вполне вероятно, что и часть книг, учтенных, в соответствии с годом выпуска под <b style="color: #9a292b;">1919</b> годом, в действительности были выпущены в предыдущем, <b style="color: #9a292b;">1918</b> году (практика печати следующего года на книгах, выпущенных в конце текущего календарного года, хорошо известна до настоящего времени).
+            </p>
+            <p>
+                Выпуск детских книг неуклонно сокращается в течение всех лет военного коммунизма и достигает минимума в <b style="color: #9a292b;">1921</b> году — всего <b style="color: #9a292b;">39</b> наименований, преимущественно книги Государственного издательства СССР. 
+                Весной <b style="color: #9a292b;">1921</b> года, вскоре после Кронштадтского восстания, X съезд РКП (б) принимает решение о проведении <i style="color: #9a292b;">новой экономической политики</i>; разрешается ограниченная частная собственность на промышленные и торговые предприятия.
             </p>
             <p>
                 Уже в 1922 году выпуск детских книг увеличивается в 5 раз по сравнению с уровнем 1921 года, а в 1923 — почти в 12 раз. В 1923 году количество опубликованных наименований практически достигает уровня 1918 года, то есть уровня до национализации крупнейших издательств. В первые годы нэпа возобновляет работу издательство И. Д. Сытина (1921), возникают крупнейшие частные издательства детской литературы, которые будут успешно существовать до конца нэпа: издательство «Радуга»  (1922) и издательство Г. Ф. Мириманова (1923), появляется специализированное государственное издательство детской и подростковой литературы «Молодая Гвардия» (1922).
