--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         
         <div class="about">
             <p>
-                С 1918 по 1939 годы в Советском Союзе было издано <b style="color: #9a292b;">более 15 тысяч</b> детских книг. По советской детской литературе этого периода существует обширная библиография, но подавляющее большинство исследований используют классические качественные методы. Мы попытались посмотреть на этот массив литературы в целом при помощи <a style="color: #9a292b;" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B5_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D1%8B_%D0%B8%D1%81%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B9" target="_blank">количественных методов исследования данных</a>.
+                С 1918 по 1939 годы в Советском Союзе было издано <b style="color: #9a292b;">более 15 тысяч</b> детских книг. 
+                <!-- По советской детской литературе этого периода существует обширная библиография, но подавляющее большинство исследований используют классические качественные методы. -->
+                Мы попытались посмотреть на этот массив литературы в целом при помощи <a style="color: #9a292b;" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B5_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D1%8B_%D0%B8%D1%81%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B9" target="_blank">количественных методов исследования данных</a>.
             </p>
             <p>
                 На этом сайте визуализирована база данных, составленная на основе 
