add more authors

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <h2>Самуил Яковлевич Маршак</h2>
                         <img src="./images/marshak_photo.jpeg" alt="">
                         <p>Русский советский поэт, драматург и переводчик, литературный критик, сценарист. Автор популярных детских книг. Лауреат Ленинской и четырёх Сталинских премий</p>
-                        <button id="close_marshak">
+                        <button id="close_marshak" class="close_button">
                             <p>Назад</p>
                         </button>
                     </div>
@@ -257,7 +257,7 @@
                         <h2>Корней Иванович Чуковский</h2>
                         <img src="./images/chukovskiy_photo.jpeg" alt="">
                         <p>Русский советский поэт, публицист, литературный критик, переводчик и литературовед, детский писатель, журналист. Отец писателей Николая Корнеевича Чуковского и Лидии Корнеевны Чуковской</p>
-                        <button id="close_chukovskiy">
+                        <button id="close_chukovskiy" class="close_button">
                             <p>Назад</p>
                         </button>
                     </div>
@@ -273,7 +273,7 @@
                         <h2>Виталий Валентинович Бианки</h2>
                         <img src="./images/bianki_photo.png" alt="">
                         <p>Советский писатель, автор многих произведений для детей</p>
-                        <button id="close_bianki">
+                        <button id="close_bianki" class="close_button">
                             <p>Назад</p>
                         </button>
                     </div>
@@ -289,7 +289,7 @@
                         <h2>Борис Степанович Житков</h2>
                         <img src="./images/zhitkov_photo.jpeg" alt="">
                         <p>Русский и советский писатель, прозаик, путешественник и исследователь. Автор популярных приключенческих рассказов и повестей, произведений о животных и романа «Виктор Вавич» о революции 1905 года</p>
-                        <button id="close_zhitkov">
+                        <button id="close_zhitkov" class="close_button">
                             <p>Назад</p>
                         </button>
                     </div>
@@ -305,7 +305,7 @@
                         <h2>Агния Львовна Барто</h2>
                         <img src="./images/barto_photo.jpeg" alt="">
                         <p>Русская советская детская поэтесса, писательница, киносценаристка, радиоведущая. Лауреат Сталинской премии второй степени и Ленинской премии</p>
-                        <button id="close_barto">
+                        <button id="close_barto" class="close_button">
                             <p>Назад</p>
                         </button>
                     </div>
@@ -321,7 +321,7 @@
                         <h2>Дмитрий Наркисович Мамин-Сибиряк</h2>
                         <img src="./images/sibiryak_photo.jpeg" alt="">
                         <p>Русский писатель-прозаик и драматург</p>
-                        <button id="close_sibiryak">
+                        <button id="close_sibiryak" class="close_button">
                             <p>Назад</p>
                         </button>
                     </div>
@@ -337,7 +337,41 @@
                         <h2>Александр Сергеевич Пушкин</h2>
                         <img src="./images/pushkin_photo.jpeg" alt="">
                         <p>Русский поэт, драматург и прозаик, заложивший основы русского реалистического направления, литературный критик и теоретик литературы, историк, публицист, журналист; один из самых авторитетных литературных деятелей первой трети XIX века</p>
-                        <button id="close_pushkin">
+                        <button id="close_pushkin" class="close_button">
+                            <p>Назад</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="break"></div>
+
+            <div class="author" style="padding-left: 100px;">
+                <button id="open_tolstoy">
+                    <img src="./images/tolstoy.png" alt="Толстой">
+                </button>
+                <div class="modal_container" id="modal_container_tolstoy">
+                    <div class="modal">
+                        <h2>Лев Николаевич Толстой</h2>
+                        <img src="./images/tolstoy_photo.jpeg" alt="">
+                        <p>Один из наиболее известных русских писателей и мыслителей, один из величайших писателей-романистов мира</p>
+                        <button id="close_tolstoy" class="close_button">
+                            <p>Назад</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="author" style="padding-right: 350px;">
+                <button id="open_perelman">
+                    <img src="./images/perelman.png" alt="Перельман">
+                </button>
+                <div class="modal_container" id="modal_container_perelman">
+                    <div class="modal">
+                        <h2>Яков Исидорович Перельман</h2>
+                        <img src="./images/perelman_photo.jpeg" alt="">
+                        <p>Русский и советский математик, физик, журналист и педагог. Член Русского общества любителей мироведения, популяризатор точных наук, основоположник жанра занимательной науки, автор понятия «научно-фантастическое»</p>
+                        <button id="close_perelman" class="close_button">
                             <p>Назад</p>
                         </button>
                     </div>
