--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
+        <meta name="viewport" content="width:device-width, initial-scale=1.0">
         <link rel="icon" href="./images/book-icon.png" type="image/png">
         <title>Школьнику на память</title>
         <link rel="stylesheet" href="./styles/style.css">
@@ -344,9 +345,7 @@
                 </div>
             </div>
 
-            <div class="break"></div>
-
-            <div class="author" style="padding-left: 100px;">
+            <div class="author">
                 <button id="open_tolstoy">
                     <img src="./images/tolstoy.png" alt="Толстой">
                 </button>
@@ -362,7 +361,7 @@
                 </div>
             </div>
 
-            <div class="author" style="padding-right: 350px;">
+            <div class="author">
                 <button id="open_perelman">
                     <img src="./images/perelman.png" alt="Перельман">
                 </button>
