--- a/index.html
+++ b/index.html
@@ -434,6 +434,21 @@
             </p>
         </div>
 
+        <div class="conclusion">
+            <p>
+                Надеемся, что наш проект пробудил интерес к детской литературе в СССР.
+            </p>
+            <p>
+                Вы можете ознакомиться с <a href="https://github.com/maslinych/childlit-rus" target="_blank" style="color: #9a292b; font-weight: 700;">базой данных</a> , на основе которой проект был реализован.
+            </p>
+            <p>    
+                С любыми вопросами и предложениями обращайтесь, пожалуйста, в Телеграм (ссылка ниже).
+            </p>
+            <p>
+                Спасибо!
+            </p>
+        </div>
+
         <div class="authors">
             <div class="member">
                 <div class="role">
