--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 Мы попытались посмотреть на этот массив литературы в целом при помощи <a style="color: #9a292b;" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B5_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D1%8B_%D0%B8%D1%81%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B9" target="_blank">количественных методов исследования данных</a>.
             </p>
             <p>
-                На этом сайте визуализирована база данных, составленная <a style="color: #9a292b;" href="https://www.hse.ru/staff/kmaslinsky">К. А. Маслинским</a> совместно с исследователями и студентами образовательных программ "Социология и социальная информатика" и "Филология" НИУ ВШЭ (Санкт-Петербург) на основе 
+                На этом сайте визуализирована база данных, составленная <a style="color: #9a292b;" href="http://pushkinskijdom.ru/laboratoriya-tsifrovyh-issledovanij-literatury-i-folklora_/kirill-aleksandrovich-maslinskij/">К. А. Маслинским</a> совместно с исследователями и студентами образовательных программ "Социология и социальная информатика" и "Филология" НИУ ВШЭ (Санкт-Петербург) на основе 
                 <div class="tooltip"> 
                     библиографических справочников И.И. Старцева.
                     <span class="tooltip-text">
